changes suggested in PR and addition of integration test cases
